# RAG

./: .env  .gitignore  README.md  basicneo4j.py  config.py  main.py  pyproject.toml  query_part_only.py
.devcontainer/: devcontainer.json
download-dir/linked_clean/: GUID-35B40B0B-0C13-43B2-BC85-18C9C91BE2D4.txt  GUID-3CC7078E-9C30-402C-B2E1-2542BEE67E8F.txt  GUID-5B3CAB26-5D06-4A99-92A0-3A04C69CE64B.txt  GUID-83E8FE8D-ACDF-4C9B-A095-860F447A442F.txt  GUID-A550B597-463F-403F-BE9A-BFF3BECB9523.txt  GUID-A80A6337-7B99-48C8-B024-EE47E2366C1B.txt  GUID-AEF15062-1ED9-4E2B-BA12-A5CE0932B976.txt  GUID-BCDAEBCB-EAE4-4EAF-BC33-08977429E9C7.txt  announcing-vmware-vsphere-support-for-intel-optane-dc-persistent-memory-technology.txt  aria.txt  benchmark.txt  cloud-disaster-recovery.txt  content.txt  flasharray-x.txt  fourth-generation-xeon-scalable-family-overview.txt  high-availability.txt  index.txt  intel-xeon-platinum-8280l-processor-38-5m-cache-2-70-ghz.txt  intel-xeon-platinum-8380hl-processor-38-5m-cache-2-90-ghz.txt  introducing-vsphere-8-the-enterprise-workload-platform.txt  memory-and-storage.txt  optane-persistent-memory-sap-hana-config-vmware.txt  replication.txt  sap-hana-backup-recovery.txt  sap_hana.txt  scalable.txt  specifications.txt  vmware-vsphere-7-0-u2-and-vsphere-ha-for-sap-hana-with-dram-and-intel-optane-pmem-in-app-direct-mode.txt  whats-new-with-vmware-vsphere-7u1.txt
download-dir/linked_raw/: 0001698281  1014294  (+104 more)
helper/: util_doc_helper.py  util_image_helper.py  util_link_helper.py
prompt_templates/: cot_prompt_template.py  image_prompt_template.py
